# AetherDash

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rustfmt.toml  tsconfig.base.json
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: cache.rs  config.rs  keychain.rs  main.rs
connectors/: __init__.py  pyproject.toml
connectors/comms/: __init__.py
connectors/comms/discord/: __init__.py  sender.py
connectors/comms/email/: __init__.py  sender.py
connectors/comms/slack/: __init__.py  sender.py
connectors/comms/telegram/: __init__.py  callback.py  sender.py
connectors/comms/twilio/: __init__.py  sender.py  webhook.py
connectors/execution/order-router/: Cargo.toml  mismatch.toml
connectors/execution/paper-ledger/: Cargo.toml
connectors/execution/risk-engine/: Cargo.toml
connectors/execution/scanner/: Cargo.toml
connectors/execution/simulator/: Cargo.toml
connectors/execution/wallet-guardian/: Cargo.toml
connectors/venues/_template/: Cargo.toml  README.md  venue.toml
connectors/venues/alpaca/: Cargo.toml  fees.toml  venue.toml
connectors/venues/hyperliquid/: Cargo.toml  fees.toml  venue.toml
connectors/venues/kalshi/: Cargo.toml  fees.toml  venue.toml
connectors/venues/openbb/: README.md  fees.toml  pyproject.toml  venue.toml
connectors/venues/polymarket/: Cargo.toml  fees.toml  venue.toml
crates/aether-agents/: Cargo.toml
crates/aether-agents/src/: backtest.rs  lib.rs  persistence.rs  proposal.rs  scheduler.rs
crates/aether-agents/tests/: postgres_automation.rs  self_improvement_loop.rs
crates/aether-audit/: Cargo.toml
crates/aether-audit/src/: anchor.rs  attribution.rs  chain.rs  emission.rs  lib.rs  verifier.rs
crates/aether-authz/: Cargo.toml
crates/aether-authz/src/: action.rs  audit.rs  authn.rs  caps.rs  enforcement.rs  grant.rs  lib.rs  policy.rs  step_up.rs  tier.rs
crates/aether-bus/: Cargo.toml
crates/aether-bus/examples/: roundtrip.rs
crates/aether-bus/src/: consumer.rs  envelope.rs  headers.rs  lib.rs  producer.rs  quarantine.rs  retry.rs  topics.rs
crates/aether-bus/tests/: quarantine_integration.rs  quarantine_integration_test.rs  quarantine_live_test.rs  redpanda_roundtrip.rs
crates/aether-core/: Cargo.toml
crates/aether-core/src/: audit.rs  canonical.rs  decimal.rs  error.rs  ids.rs  json.rs  lib.rs  market.rs  opportunity.rs  order.rs  quote.rs  redis_keys.rs  retry.rs  time.rs
crates/aether-core/tests/: canonical_adversarial_tests.rs  golden_tests.rs  migration_pairing_test.rs
crates/aether-decompose/: Cargo.toml
crates/aether-decompose/src/: components.rs  decompose.rs  fees.rs  lib.rs  mismatch.rs
crates/aether-decompose/tests/: test_decompose.rs
crates/aether-fillmodel/: Cargo.toml
crates/aether-fillmodel/src/: config.rs  lib.rs  walk.rs
crates/aether-fillmodel/tests/: test_walk.rs
crates/aether-gateway/: Cargo.toml
crates/aether-gateway/src/: auth.rs  feed.rs  frames.rs  health.rs  lib.rs  main.rs
crates/aether-gateway/tests/: feed_integration.rs  health_integration_test.rs  ws_integration.rs
crates/aether-observe/: Cargo.toml
crates/aether-observe/src/: health.rs  lib.rs  metrics.rs  redact.rs  trace.rs
crates/aether-plugin/: Cargo.toml
crates/aether-plugin/examples/: read_markets.wat
crates/aether-plugin/src/: approval.rs  audit.rs  dependency.rs  gate.rs  generation.rs  lib.rs  manifest.rs  persistence.rs  registry.rs  runtime.rs  sandbox.rs  signing.rs
crates/aether-plugin/tests/: plugin_gate.rs  postgres_lifecycle.rs
crates/aether-proto/: Cargo.toml  build.rs
crates/aether-proto/src/: lib.rs
crates/aether-testing/: Cargo.toml
crates/aether-testing/src/: lib.rs  lifecycle.rs  regression.rs  replay.rs
crates/aether-testing/tests/: test_lifecycle.rs  test_replay.rs
pylib/: pyproject.toml
pylib/aether_py/: __init__.py  canonical.py  models.py
pylib/aether_py/proto/: __init__.py
pylib/aether_py/tests/: test_cross_language_canonical.py  test_goldens.py
server/alerts/: __init__.py  actions.py  app.py  approval_notifications.py  approvals.py  bus.py  dispatch.py  effects.py  history.py  identity.py  models.py  pyproject.toml  rules.py  webhooks.py
server/alerts/tests/: __init__.py  conftest.py  test_action_effect_client.py  test_actions.py  test_approvals.py  test_bus_integration.py  test_dispatch.py  test_effects.py  test_history.py  test_rules.py
server/brain/: __init__.py  app.py  benchmark.py  explain.py  graph.py  grpc_server.py  models.py  pyproject.toml  recall.py  rerank.py  router_stub.py  service.py  storage.py  store.py  vault.py
server/brain/jobs/: __init__.py  staleness.py  tiering.py
server/brain/pipeline/: __init__.py  clean.py  embed.py  extract.py  index.py  link.py  runner.py  summarize.py
server/brain/tests/: __init__.py  conftest.py  test_benchmark.py  test_explain.py  test_goldens.py  test_graph.py  test_grpc.py  test_jobs.py  test_link.py  test_pipeline.py  test_recall.py  test_recall_v2.py  test_recall_weighting.py  test_rerank.py  test_store.py  test_vault.py
server/inbox/: __init__.py  app.py  dedup.py  fetch.py  filing.py  processing.py  pyproject.toml  queue.py
server/inbox/parse/: __init__.py  image.py  pdf.py  sandbox.py  text.py  worker.py
server/inbox/tests/: __init__.py  test_fetch.py  test_filing.py  test_parse.py  test_processing.py  test_reprocess.py  test_webhooks.py
server/inbox/webhooks/: __init__.py  gmail.py  msgraph.py
server/ingest/: __init__.py  app.py  logging_config.py  metrics.py  models.py  pyproject.toml  runtime.py  scheduler.py  state.py
server/ingest/ocr/: __init__.py  gpu_worker.py  pipeline.py
server/ingest/scoring/: __init__.py  reliability.py
server/ingest/sources/: crawl.py  (+7 more)
server/llm_router/: __init__.py  accounting.py  app.py  cache.py  client.py  config.py  fallback.py  metrics.py  pyproject.toml  router.py
server/swarm/: __init__.py  budget.py  models.py  orchestrator.py  packet.py  pyproject.toml  scratchpad.py  worker.py
(+580 files in other folders)
