[workspace]
members = [
    "crates/aether-core",
    "crates/aether-bus",
    "crates/aether-gateway",
    "crates/aether-proto",
    "client/src-tauri",
    "connectors/venues/kalshi",
    "connectors/venues/_template",
]
# EP-001/101: single crate scaffold. Each EP appends its members.
# Expected future members:
#   "crates/*", "connectors/execution/*", "connectors/venues/*",
#   "connectors/comms/*"
resolver = "2"

# The template crate is a workspace member (for workspace-lint inheritance)
# but excluded from default builds.  Build it explicitly:
#   cargo build -p aether-venue-TEMPLATE
default-members = [
    "crates/aether-core",
    "crates/aether-bus",
    "crates/aether-gateway",
    "crates/aether-proto",
    "client/src-tauri",
    "connectors/venues/kalshi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "AGPL-3.0-or-later"
repository = "https://github.com/operator/aetherdash"

[workspace.lints.rust]
unused_must_use = "deny"
unsafe_code = "deny"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
