[workspace]
members = [
    "crates/aether-core",
    "crates/aether-bus",
    "crates/aether-authz",
    "crates/aether-gateway",
    "crates/aether-proto",
    "client/src-tauri",
    "crates/aether-fillmodel",
    "crates/aether-decompose",
    "crates/aether-audit",
    "crates/aether-observe",
    "crates/aether-testing",
    "crates/aether-plugin",
    "crates/aether-agents",
    "connectors/venues/kalshi",
    "connectors/venues/polymarket",
    "connectors/venues/hyperliquid",
    "connectors/venues/alpaca",
    "connectors/venues/_template",
    "connectors/execution/paper-ledger",
    "connectors/execution/risk-engine",
    "connectors/execution/order-router",
    "connectors/execution/wallet-guardian",
    "connectors/execution/scanner",
    "connectors/execution/simulator",
]
# EP-001/101: single crate scaffold. Each EP appends its members.
# Expected future members:
#   "crates/*", "connectors/execution/*", "connectors/venues/*",
#   "connectors/comms/*"
resolver = "2"

# The template crate is a workspace member (for workspace-lint inheritance)
# but excluded from default builds.  Build it explicitly:
#   cargo build -p aether-venue-TEMPLATE
default-members = [
    "crates/aether-core",
    "crates/aether-bus",
    "crates/aether-authz",
    "crates/aether-gateway",
    "crates/aether-proto",
    "crates/aether-plugin",
    "crates/aether-agents",
    "crates/aether-testing",
    "client/src-tauri",
    "connectors/venues/kalshi",
    "connectors/venues/polymarket",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "AGPL-3.0-or-later"
repository = "https://github.com/operator/aetherdash"

[workspace.lints.rust]
unused_must_use = "deny"
unsafe_code = "deny"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[workspace.lints.clippy]
dbg_macro = "deny"
unwrap_used = "warn"
expect_used = "warn"
todo = "warn"
