[project]
name = "aetherdash"
version = "0.1.0"
description = "AETHER Terminal — self-hosted AI-native trading terminal"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }

[tool.uv.workspace]
# EP-001: minimal workspace. Each EP appends its members when directories are created.
# Expected layout: pylib, server/brain, server/llm_router, server/alerts, etc.
members = []

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # allow assert in tests

[tool.ruff.format]
exclude = [".venv", "target", "node_modules"]
docstring-code-line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
exclude = ["\\.venv", "target", "node_modules"]

[[tool.mypy.overrides]]
module = "server.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["pylib", "server"]
addopts = ["-ra", "-q", "--strict-markers", "--strict-config"]
markers = [
    "integration: integration tests (require dev stack)",
    "e2e: end-to-end tests",
    "slow: slow tests",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
