[project]
name = "aetherdash"
version = "0.1.0"
description = "AETHER Terminal — self-hosted AI-native trading terminal"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }

[tool.uv.workspace]
# EP-001: minimal workspace. Each EP appends its members when directories are created.
# Expected layout: pylib, server/brain, server/llm_router, server/alerts, etc.
members = ["pylib", "server/brain"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # allow assert in tests
"server/**/tests/**/*.py" = ["S101"]  # allow assert in tests

[tool.ruff.format]
exclude = [".venv", "target", "node_modules"]
docstring-code-line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true
explicit_package_bases = true
exclude = ["\\.venv", "target", "node_modules"]

[[tool.mypy.overrides]]
module = "server.*"
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = [
    "import-untyped", "import-not-found", "type-arg", "attr-defined",
    "no-untyped-def", "union-attr", "unused-ignore", "arg-type",
    "no-any-return", "type-var", "misc", "no-untyped-call",
    "index",
]

[[tool.mypy.overrides]]
module = "pylib.*"
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["no-any-return", "type-arg", "no-untyped-def"]

[[tool.mypy.overrides]]
module = "aether_py.*"
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["type-arg", "no-any-return"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["pylib", "server"]
pythonpath = ["."]
addopts = ["-ra", "-q", "--strict-markers", "--strict-config"]
markers = [
    "integration: integration tests (require dev stack)",
    "e2e: end-to-end tests",
    "slow: slow tests",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pydantic>=2",
    "fastapi>=0.115",
    "httpx>=0.27",
]
