[project]
name = "aether-connectors"
version = "0.1.0"
description = "AETHER Connectors — venue adapters, comms channels, and middleware"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["connectors.*"]
