[project]
name = "aether-connectors"
version = "0.1.0"
description = "AETHER Connectors — venue adapters, comms channels, and middleware"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.60",
    "grpcio-health-checking>=1.60",
    "grpcio-tools>=1.60",
    "httpx>=0.27",
    "openbb>=4.0",
    "openbb-yfinance>=1.0",
    "protobuf>=4.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["connectors.*"]
