[package]
name = "aether-agents"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "Human-gated code generation, replay backtesting, scheduling, and improvement proposals"
license = "AGPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
aether-authz = { path = "../aether-authz" }
aether-plugin = { path = "../aether-plugin" }
aether-testing = { path = "../aether-testing" }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
