[package]
name = "aether-audit"
version = "0.1.0"
edition = "2021"
[lints]
workspace = true
[dependencies]
aether-core = { path = "../aether-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
tracing = "0.1"
