[package]
name = "aether-authz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "AETHER five-tier authorization, step-up, grants, and caps policy"

[lints]
workspace = true

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
hmac = "0.12"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2"

[dev-dependencies]
serde_json = "1"
