[package]
name = "aether-bus"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "AETHER Terminal — Redpanda bus: topic registry, envelope, producer/consumer"
license = "AGPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
aether-core = { path = "../aether-core" }
hex = "0.4"
rand = "0.8"
rdkafka = { version = "0.36", features = ["cmake-build"] }
rust-s3 = { version = "0.37", default-features = false, features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
hex = "0.4"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
