[package]
name = "aether-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "AETHER Terminal — canonical domain types, serialization, and edge decomposition math"
license = "AGPL-3.0-or-later"

[lints]
workspace = true

[features]
default = []
golden-gen = []

[[bin]]
name = "gen-goldens"
path = "src/bin/gen-goldens.rs"
required-features = ["golden-gen"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rust_decimal = { version = "1", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
thiserror = "2"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
proptest = "1"
