[package]
name = "aether-decompose"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "AETHER Terminal — net-edge decomposition engine per SPEC-012 (11-component pure functions)"
license = "AGPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
aether-core = { path = "../aether-core" }
aether-fillmodel = { path = "../aether-fillmodel" }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
proptest = "1"
