[package]
name = "aether-gateway"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "AETHER Terminal — WebSocket gateway skeleton (SPEC-003 frame protocol)"
license = "AGPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
aether-core = { path = "../aether-core" }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }

[dev-dependencies]
axum-test = "16"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
