[package]
name = "aether-gateway"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "AETHER Terminal — WebSocket gateway skeleton (SPEC-003 frame protocol)"
license = "AGPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
aether-authz = { path = "../aether-authz" }
aether-core = { path = "../aether-core" }
aether-bus = { path = "../aether-bus" }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
rust_decimal = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "rust_decimal"] }
sha2 = "0.10"

[dev-dependencies]
axum-test = "16"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
