[package]
name = "aether-testing"
version = "0.1.0"
edition = "2021"
[lints]
workspace = true
[dependencies]
aether-core = { path = "../aether-core" }
aether-decompose = { path = "../aether-decompose" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tempfile = "3"
sha2 = "0.10"
rust_decimal = { version = "1", features = ["serde"] }
