[project]
name = "aether-ingest"
version = "0.1.0"
description = "AETHER compliance-first ingestion fleet"
requires-python = ">=3.11"
dependencies = [
    "aether-brain",
    "asyncpg>=0.30",
    "httpx>=0.27",
    "onnxruntime>=1.20",
    "pydantic>=2.10",
    "rapidocr>=3.9",
    "structlog>=24.4",
    "ulid-py>=1.1",
]

[tool.uv.sources]
aether-brain = { workspace = true }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["server.ingest", "server.ingest.*"]
