[project]
name = "aether-llm-router"
version = "0.1.0"
description = "AETHER LLM Router — LiteLLM-powered provider routing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "litellm>=1.50",
    "redis>=5.0",
    "pydantic>=2.10",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["server.llm_router", "server.llm_router.*"]
