[package]
name = "aether-paper-ledger"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
aether-core = { path = "../../../crates/aether-core" }
aether-fillmodel = { path = "../../../crates/aether-fillmodel" }
aether-bus = { path = "../../../crates/aether-bus" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
rust_decimal = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "rust_decimal", "json"] }

[dev-dependencies]
tokio-test = "0.4"
