[package]
name = "aether-scanner"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "AETHER Terminal — opportunity scanner using the decomposition engine (EP-307)"
license = "AGPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
aether-core = { path = "../../../crates/aether-core" }
aether-decompose = { path = "../../../crates/aether-decompose" }
aether-bus = { path = "../../../crates/aether-bus" }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
tokio-test = "0.4"
