[package]
name = "aether-simulator"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "AETHER Terminal — net-edge decomposition simulator with fill walk + sensitivity"
license = "AGPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
aether-core = { path = "../../../crates/aether-core" }
aether-decompose = { path = "../../../crates/aether-decompose" }
aether-fillmodel = { path = "../../../crates/aether-fillmodel" }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
