[package]
name = "aether-wallet-guardian"
version = "0.1.0"
edition = "2021"
description = "AETHER Terminal -- wallet guardian: isolated signing service"
license = "AGPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
aether-core = { path = "../../../crates/aether-core" }
aether-authz = { path = "../../../crates/aether-authz" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
rust_decimal = "1"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
k256 = { version = "0.13", features = ["ecdsa", "pem"] }
reqwest = { version = "0.12", features = ["json"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand_core = "0.6"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
